@@ -1,6 +1,5 @@
 package com.template.contracts;
 
-import com.sun.tools.javac.util.List;
 import com.template.states.TokenState;
 import net.corda.core.identity.CordaX500Name;
 import net.corda.testing.contracts.DummyContract;
@@ -8,6 +7,8 @@ import net.corda.testing.contracts.DummyState;
 import net.corda.testing.core.TestIdentity;
 import net.corda.testing.node.MockServices;
 import org.junit.Test;
+
+import java.util.Arrays;
 
 import static com.template.contracts.TokenContract.TOKEN_CONTRACT_ID;
 import static net.corda.testing.node.NodeTestUtils.transaction;
@@ -80,7 +81,7 @@ public class TokenContractIssueTests {
             tx.output(TOKEN_CONTRACT_ID, new TokenState(alice.getParty(), bob.getParty(), 30L));
             tx.output(TOKEN_CONTRACT_ID, new TokenState(carly.getParty(), bob.getParty(), 20L));
             tx.output(TOKEN_CONTRACT_ID, new TokenState(carly.getParty(), alice.getParty(), 20L));
-            tx.command(List.of(alice.getPublicKey(), carly.getPublicKey()), new TokenContract.Commands.Issue());
+            tx.command(Arrays.asList(alice.getPublicKey(), carly.getPublicKey()), new TokenContract.Commands.Issue());
             tx.verifies();
             return null;
         });
