@@ -1,11 +1,12 @@
 package com.template.states;
 
-import com.sun.tools.javac.util.List;
 import net.corda.core.identity.CordaX500Name;
 import net.corda.core.identity.Party;
 import net.corda.testing.core.TestIdentity;
 import org.junit.Test;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Map;
 
 import static com.template.states.TokenStateUtilities.mapSumByIssuer;
@@ -19,14 +20,14 @@ public class TokenStateUtilitiesMapSumByIssuerTests {
 
     @Test
     public void mapSumByIssuerGetsSameValueOnSingleton() {
-        final Map<Party, Long> mappedSums = mapSumByIssuer(List.of(new TokenState(alice, bob, 10)));
+        final Map<Party, Long> mappedSums = mapSumByIssuer(Collections.singletonList(new TokenState(alice, bob, 10)));
         assertEquals(1, mappedSums.size());
         assertEquals(10L, mappedSums.get(alice).longValue());
     }
 
     @Test
     public void mapSumByIssuerGetsSumOnUniqueIssuer() {
-        final Map<Party, Long> mappedSums = mapSumByIssuer(List.of(
+        final Map<Party, Long> mappedSums = mapSumByIssuer(Arrays.asList(
                 new TokenState(alice, bob, 10),
                 new TokenState(alice, carly, 15)));
         assertEquals(1, mappedSums.size());
@@ -35,7 +36,7 @@ public class TokenStateUtilitiesMapSumByIssuerTests {
 
     @Test
     public void mapSumByIssuerGetsSumForEachIssuer() {
-        final Map<Party, Long> mappedSums = mapSumByIssuer(List.of(
+        final Map<Party, Long> mappedSums = mapSumByIssuer(Arrays.asList(
                 new TokenState(alice, bob, 10),
                 new TokenState(alice, carly, 15),
                 new TokenState(carly, bob, 30),
@@ -48,14 +49,14 @@ public class TokenStateUtilitiesMapSumByIssuerTests {
 
     @Test(expected = ArithmeticException.class)
     public void overflowTriggersErrorInMapSumByIssuer() {
-        mapSumByIssuer(List.of(
+        mapSumByIssuer(Arrays.asList(
                 new TokenState(alice, bob, Long.MAX_VALUE),
                 new TokenState(alice, carly, 1)));
     }
 
     @Test(expected = UnsupportedOperationException.class)
     public void mapSumByIssuerIsImmutable() {
-        final Map<Party, Long> mappedSums = mapSumByIssuer(List.of(new TokenState(alice, bob, 10)));
+        final Map<Party, Long> mappedSums = mapSumByIssuer(Collections.singletonList(new TokenState(alice, bob, 10)));
         //noinspection ConstantConditions
         mappedSums.put(alice, 20L);
     }
